--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 					<nav id="nav">
 						<ul class="links">
 						  <li class="active"><a href="index.html">Home page</a></li>
-						  <li><a href="generic.html">reading Schedule</a></li>
+						  <li><a href="readingschedule.html">REVIEW POLICY</a></li>
+						  <li>&nbsp;</li>
 						  <li><a href="elements.html">ABout me</a></li>
 						</ul>
 						<ul class="icons">
@@ -45,15 +46,14 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major"><span class="date">May 18, 2020</span>
-								  <h2>THIS title is a work in progress</h2>
-								  <p>Current plans for the site construciton, pick 4 titles, add pictures, figure out colour scheme, applyt ehme to pics, begin to write up reveiws</p>
-<p>&nbsp;</p>
+								<header class="major">May 18, 2020
+								  <h2>The seven husbands of evelyn Hugo &nbsp;</h2>
+								  <p> “I know the whole world prefers a woman who doesn’t know her power, but I’m sick of all that.” </p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+								  <li><a href="EvelynHugo.html">Read More</a></li>
+							  </ul>
 							</article>
 
 						<!-- Posts -->
@@ -62,18 +62,18 @@
 									<header><span class="date">April 24, 2020</span>
 									  <h2><a href="#">When breathe becomes air</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>“You can’t ever reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving.” Continue from here dude</p>
+									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" width="1756" /></a>
+									<p>“You can’t ever reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving.” </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header><span class="date">April 22, 2020</span>
-									  <h2>The seven husbands of evelyn hugo</h2>
+									  <h2>They both die at the end</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>“I’m under absolutely no obligation to make sense to you.”</p>
+									<p> “Maybe it's better to have gotten it right and been happy for one day instead of living a lifetime of wrongs.” </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -83,44 +83,40 @@
 									  <h2>If we were villains</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>“Actors are by nature volatile—alchemic creatures composed of incendiary elements, emotion and ego and envy. Heat them up, stir them together, and sometimes you get gold. Sometimes disaster.”<br>
-								  </p>
-									<p>Cue ANGST </p>
+									<p>“Actors are by nature volatile—alchemic creatures composed of incendiary elements, emotion and ego and envy. Heat them up, stir them together, and sometimes you get gold. Sometimes disaster.” </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header><span class="date">April 14, 2020</span>
-									  <h2>The wrath and the dawn/ The rose and the dagger</h2>
+									  <h2>The Wrath and the dawn </h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>“Tonight is a night to turn heads. Make them remember you. Make sure they never forget. You are the Calipha of Khorasan, and you have the ear of a king. And, most important, you are a fearsome thing to behold in your own right.”</p>
+									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" height="270" /></a>
+									<p> “She was a dangerous, dangerous girl. A plague. A Mountain of Adamant who tore the iron from ships, sinking them to their watery graves without a second thought. With a mere smile and a wrinkle of her nose.” </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header><span class="date">April 11, 2020</span>
-									  <h2>An enchantment of ravens</h2>
+									  <h2>warcross</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>“Why do we desire, above all other things, that which has the greatest power to destroy us?”<br>
+									<p> “Everything's science fiction until someone makes it science fact.” <br>
 								  </p>
-								
-								  <ul class="actions special">
+									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
-									<header>April 7, 2020
-									  <h2>HELLO WORLD</h2>
+									<header>April 8, 2020
+<h2>HELLO WORLD</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" height="240" /></a>
 									<p>Surprise bitches. Its me</p>
-									<p>&nbsp;&nbsp;</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+<ul class="actions special">
+			<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 					  </section>
@@ -168,7 +164,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>123 go fuck yourself &nbsp;</p>
+								<p>Sydney, NSW , 2000 </p>
 							</section>
 							<section>
 								<h3>Phone</h3>
