--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						  <li class="active"><a href="index.html">Home page</a></li>
 						  <li><a href="readingschedule.html">REVIEW POLICY</a></li>
 						  <li>&nbsp;</li>
-						  <li><a href="elements.html">ABout me</a></li>
+						  <li><a href="aboutme.html">ABout ME</a></li>
 						</ul>
 						<ul class="icons">
 						  <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -52,7 +52,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-								  <li><a href="EvelynHugo.html">Read More</a></li>
+								  <li><a href="EvelynHugo.html" class="button">Read More</a></li>
 							  </ul>
 							</article>
 
@@ -60,13 +60,13 @@
 							<section class="posts">
 								<article>
 									<header><span class="date">April 24, 2020</span>
-									  <h2><a href="#">When breathe becomes air</a></h2>
+									  <h2><a href="#">When breath becomes air</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" width="1756" /></a>
 									<p>“You can’t ever reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving.” </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									  <li><a href="WhenBreatheBecomesAir.html" class="button"> Full Story</a></li>
+								  </ul>
 								</article>
 								<article>
 									<header><span class="date">April 22, 2020</span>
